test/Programs/ValidTests/consAsFun/consAsFun.fst
data Tree = Node Int Tree Tree | Leaf

f : (Int -> Tree -> Tree -> Tree) -> Tree
f g = g 5 Leaf Leaf


main : Tree
main = f Node


  
